kubernetes/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hrs
  labels:
    name: hrs
