kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrs-deployment
  namespace: hrs
  labels:
    app: hrs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hrs
  template:
    metadata:
      labels:
        app: hrs
    spec:
      containers:
        - name: hrs-backend
          image: sr19thjm/hrs:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hrs-backend-service
  namespace: hrs
spec:
  selector:
    app: hrs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
