kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrs-frontend
  namespace: hrs
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: sr19thjm/hrs_frontend
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hrs-frontend-service
  namespace: hrs
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
